# text2motion-nao

./: README.md
motion_specification/: draw_3d_skeleton_dynamic.py  generate_limb_motion_specifications.py  mirror_skeleton.py  rotation.py  rotation_convert.py
pose2joint_angle_signal_net/: export_joint_angles.py  fk.py  iknn.py  interpolate_default_offset.py  joints.py  model.py  motion_config.py  myutils.py  robot.py  rotation.py  rotation_convert.py
pose2joint_angle_signal_net/outputs/: 001_limb_spec.npy  001_mirror_limb_spec.npy
pose2joint_angle_signal_net/weights/: best.pt
pose2joint_datasets/: 001_limb_spec.npy  001_mirror_limb_spec.npy
process_diffusion_outputs/: A_person_raises_his_right_arm_and_then_lowers_it.npy  export.py
replay_motion_isaac/: nao.py  replay_motion_set.py
replay_motion_isaac/nao/: .asset_hash  nao_d.usd
replay_motion_isaac/nao/configuration/: nao_d_physics.usd
rl_nao/: export.sh  play.sh  policy.py  train.sh
rl_nao/assets/: __init__.py
rl_nao/assets/robots/: nao.py
rl_nao/my_utils/: __init__.py  fk.py  joint_ids.py  math.py  rotation_convert.py
rl_nao/scripts/: export_policy.py
rl_nao/tasks/: __init__.py
ros2_ws/nao_driver/: CMakeLists.txt  package.xml
ros2_ws/nao_driver/src/: joint_angles.h  joint_limits.h  lola_message.cpp  lola_message.h  nao_driver_node.cpp  sensor_data.h
ros2_ws/nao_interfaces/: CMakeLists.txt  package.xml
ros2_ws/nao_interfaces/msg/: Joints.msg  NaoActuator.msg  NaoSensor.msg
ros2_ws/rl_controller/: .gitignore  package.xml  setup.cfg  setup.py
ros2_ws/rl_controller/rl_controller/: madgwickahrs.py  motion_config.py  motion_utils.py  observations.py  policy.py  quaternion.py  rl_controller_node.py
skeleton_npy/: 001.npy  001_mirror.npy
(+23 files in other folders)
